name:                stronghold
version:             0.1
build-type:          Simple
cabal-version:       >=1.8

executable stronghold
  ghc-options:         -threaded -rtsopts
  main-is:             stronghold.hs
  build-depends:       base ==4.6.*, operational, bytestring, text, aeson,
                       snap-server, snap-core, cereal, zookeeper, cryptohash,
                       base16-bytestring, transformers, unordered-containers,
                       hashable, time, stm, mtl

executable wipe
  ghc-options:         -threaded
  main-is:             wipe.hs
  build-depends:       base ==4.6.*, zookeeper, cryptohash, base16-bytestring,
                       text, bytestring
