name:                stronghold
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable stronghold
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts
  hs-source-dirs:      src
  main-is:             stronghold.hs
  build-depends:       base >=4.6.0, operational, bytestring, text, aeson,
                       snap-server, snap-core, cereal, zookeeper, cryptohash,
                       base16-bytestring, transformers, unordered-containers,
                       hashable, time, stm, mtl, async, sqlite-simple,
                       case-insensitive

executable wipe
  default-language:    Haskell2010
  ghc-options:         -threaded
  hs-source-dirs:      src
  main-is:             wipe.hs
  build-depends:       base >=4.6.0, zookeeper, cryptohash, base16-bytestring,
                       text, bytestring
